--- a/troubleshooting_commands.yml
+++ b/troubleshooting_commands.yml
@@ -35,7 +35,7 @@
       commands: "{{ commands | json_query(query) }}"
     vars:
       #query: "[?tags.contains(@, '{{ filter_tags }}')].command"
-      query: "[?tags.contains(@, ["mgmt","l3"])].command"
+      query: "[?tags.contains(@, ['mgmt','l3'])].command"
 
   - name: Run show commands on remote devices
     cisco.nxos.nxos_command:
