--- a/troubleshooting_commands.yml
+++ b/troubleshooting_commands.yml
@@ -1,5 +1,6 @@
 - hosts: all
   vars:
+    filter_tag: "a"
     commands:
       - command: show version
         tags: 
@@ -30,12 +31,19 @@
       # - "show bgp internal evi 100010"
 
   tasks:
-  # - name: Filter show commands based on a tag
-  #   set_fact:
-  #     commands: "{{ commands | json_query(query) }}"
-  #   vars:
-  #     query: "[?tags.contains(@, '{{ filter_tag }}')].command"
-  #   #when: filter_tag != None
+  - name: Filter show commands based on a tag
+    set_fact:
+      commands: "{{ commands | json_query(query) }}"
+    vars:
+      query: "[?tags.contains(@, '{{ filter_tag }}')].command"
+    when: filter_tag != None
+  
+  - name: Return all show commands if non filter specified
+    set_fact:
+      commands: "{{ commands | json_query(query) }}"
+    vars:
+      query: "[].command"
+    when: filter_tag == None
 
   - name: Run show commands on remote devices
     cisco.nxos.nxos_command:
