Updating to remove the deprecated modules

--- a/host_vars/leaf-1.yml
+++ b/host_vars/leaf-1.yml
@@ -13,3 +13,9 @@ vlans_unique:
   - vlan_id: 10
     admin_state: up
     name: VLAN10
+
+# Host facing interfaces
+host_facing_ifaces:
+  - name: Ethernet1/3
+    vlan_id: 10
+    enabled: true
