--- a/roles/leaf/tasks/main.yml
+++ b/roles/leaf/tasks/main.yml
@@ -20,6 +20,22 @@
     ipv4: '{{ item.ipv4 }}'
   with_items: '{{ loopback_ip }}'
 
+- name: Configuring Host Facing Interfaces as L2 
+  nxos_l2_interfaces:
+    config: 
+      name: '{{item.name}}'
+      mode: layer2
+      enabled: '{{item.enabled}}'
+  with_items: '{{ host_facing_ifaces }}'
+
+- name: Configuring Host Facing Interfaces as L2 
+  nxos_l2_interfaces:
+    config: 
+      name: '{{item.name}}'
+      access: 
+        vlan: '{{item.vlan_id}}'
+  with_items: '{{ host_facing_ifaces }}'
+
 - name: Configuring Spine Facing Interfaces as L3 and with Jumbo MTU
   nxos_interface:
     name: '{{item.name}}'
