Updating to remove the deprecated modules

--- a/roles/leaf/tasks/main.yml
+++ b/roles/leaf/tasks/main.yml
@@ -31,7 +31,7 @@
 - name: Configuring Host Facing Interfaces as L2 
   nxos_l2_interfaces:
     config: 
-      name: '{{item.name}}'
+    - name: '{{item.name}}'
       access: 
         vlan: '{{item.vlan_id}}'
   with_items: '{{ host_facing_ifaces }}'
