Updating to remove the deprecated modules

--- a/roles/leaf/tasks/main.yml
+++ b/roles/leaf/tasks/main.yml
@@ -23,9 +23,9 @@
 - name: Configuring Host Facing Interfaces as L2 
   nxos_l2_interfaces:
     config: 
-      name: '{{item.name}}'
-      mode: layer2
-      enabled: '{{item.enabled}}'
+      - name: '{{item.name}}'
+        mode: layer2
+        enabled: '{{item.enabled}}'
   with_items: '{{ host_facing_ifaces }}'
 
 - name: Configuring Host Facing Interfaces as L2 
