Updating to remove the deprecated modules

--- a/roles/leaf/tasks/main.yml
+++ b/roles/leaf/tasks/main.yml
@@ -25,6 +25,7 @@
     config: 
       - name: '{{item.name}}'
         mode: access
+        enabled: yes
   with_items: '{{ host_facing_ifaces }}'
 
 - name: Configuring Host Facing Interfaces as L2 
