--- a/roles/leaf/tasks/main.yml
+++ b/roles/leaf/tasks/main.yml
@@ -21,10 +21,9 @@
   with_items: '{{ loopback_ip }}'
 
 - name: Configuring Host Facing Interfaces as L2 
-  nxos_l2_interfaces:
+  nxos_interfaces:
     config: 
       - name: '{{item.name}}'
-        mode: access
         enabled: yes
   with_items: '{{ host_facing_ifaces }}'
 
@@ -32,6 +31,7 @@
   nxos_l2_interfaces:
     config: 
       - name: '{{item.name}}'
+        mode: access
         access: 
           vlan: '{{item.vlan_id}}'
   with_items: '{{ host_facing_ifaces }}'
