--- a/ansible.cfg
+++ b/ansible.cfg
@@ -476,46 +476,46 @@ bin_ansible_callbacks=true
 
 [colors]
 # (string) Defines the color to use on 'Changed' task status
-;changed=yellow
+changed=yellow
 
 # (string) Defines the default color to use for ansible-console
-;console_prompt=white
+console_prompt=white
 
 # (string) Defines the color to use when emitting debug messages
-;debug=dark gray
+debug=dark gray
 
 # (string) Defines the color to use when emitting deprecation messages
-;deprecate=purple
+deprecate=purple
 
 # (string) Defines the color to use when showing added lines in diffs
-;diff_add=green
+diff_add=green
 
 # (string) Defines the color to use when showing diffs
-;diff_lines=cyan
+diff_lines=cyan
 
 # (string) Defines the color to use when showing removed lines in diffs
-;diff_remove=red
+diff_remove=red
 
 # (string) Defines the color to use when emitting error messages
-;error=red
+error=red
 
 # (string) Defines the color to use for highlighting
-;highlight=white
+highlight=white
 
 # (string) Defines the color to use when showing 'OK' task status
-;ok=green
+ok=green
 
 # (string) Defines the color to use when showing 'Skipped' task status
-;skip=cyan
+skip=cyan
 
 # (string) Defines the color to use on 'Unreachable' status
-;unreachable=bright red
+unreachable=bright red
 
 # (string) Defines the color to use when emitting verbose messages. i.e those that show with '-v's.
-;verbose=blue
+verbose=blue
 
 # (string) Defines the color to use when emitting warning messages
-;warn=bright purple
+warn=bright purple
 
 
 [selinux]
