--- a/ansible.cfg
+++ b/ansible.cfg
@@ -13,7 +13,7 @@
 ;cow_selection=default
 
 # (boolean) This option forces color mode even when running without a TTY or the "nocolor" setting is True.
-force_color=False
+force_color=True
 
 # (boolean) This setting allows suppressing colorizing output, which is used to give a better indication of failure and status information.
 ;nocolor=False
