--- a/ansible.cfg
+++ b/ansible.cfg
@@ -479,7 +479,7 @@ bin_ansible_callbacks=true
 changed=bright yellow
 
 # (string) Defines the default color to use for ansible-console
-console_prompt=bright white
+console_prompt=white
 
 # (string) Defines the color to use when emitting debug messages
 debug=dark gray
