--- a/ansible.cfg
+++ b/ansible.cfg
@@ -494,10 +494,10 @@ diff_add=bright green
 diff_lines=bright cyan
 
 # (string) Defines the color to use when showing removed lines in diffs
-diff_remove=bright magenta
+diff_remove=bright red
 
 # (string) Defines the color to use when emitting error messages
-error=bright magenta
+error=bright red
 
 # (string) Defines the color to use for highlighting
 highlight=white
@@ -509,7 +509,7 @@ ok=bright green
 skip=bright cyan
 
 # (string) Defines the color to use on 'Unreachable' status
-unreachable=bright magenta
+unreachable=bright red
 
 # (string) Defines the color to use when emitting verbose messages. i.e those that show with '-v's.
 verbose=bright blue
