--- a/roles/leaf/tasks/main.yml
+++ b/roles/leaf/tasks/main.yml
@@ -16,9 +16,11 @@
   ignore_errors: yes
 
 - name: Assigning IP Addresses to the Loopback interfaces
-  nxos_l3_interface:
-    name: '{{ item.name }}'
-    ipv4: '{{ item.ipv4 }}'
+  nxos_l3_interfaces:
+    config:
+      - name: '{{ item.name }}'
+        ipv4: 
+          - address: '{{ item.ipv4 }}'
   with_items: '{{ loopback_ip }}'
 
 - name: Configuring Host Facing Interfaces as L2 
@@ -150,7 +152,7 @@
 - name: Creating VXLAN Tunnel Interface
   nxos_interfaces:
     config:
-      - interface: nve1
+      - name: nve1
         enabled: no
 
 - name: Configuring VXLAN Tunnel Interface for MP-BGP EVPN Control Plane
@@ -220,9 +222,11 @@
     - '{{ l3_vni_svi_list }}'
 
 - name: Configuring L2 VNI SVIs with IP addresses
-  nxos_l3_interface:
-    name: 'vlan {{ item.vlan_id }}'
-    ipv4: '{{ item.ip }}'
+  nxos_l3_interfaces:
+    config:
+      - name: 'vlan {{ item.vlan_id }}'
+        ipv4: 
+          - address: '{{ item.ip }}'
   with_items: '{{l2_vni_svi_list }}'
 
 - name: Enabling Anycast Gateway on L2VNI SVIs
