--- a/roles/spine/tasks/main.yml
+++ b/roles/spine/tasks/main.yml
@@ -16,9 +16,11 @@
   ignore_errors: yes
 
 - name: Assigning IP Addresses to the Loopback interfaces
-  nxos_l3_interface:
-    name: '{{ item.name }}'
-    ipv4: '{{ item.ipv4 }}'
+  nxos_l3_interfaces:
+    config:
+      - name: '{{ item.name }}'
+        ipv4: 
+          - address: '{{ item.ipv4 }}'
   with_items: '{{ loopback_ip }}'
 
 - name: Configuring Leaf Facing Interfaces as L3 and with Jumbo MTU
