--- a/roles/spine/tasks/main.yml
+++ b/roles/spine/tasks/main.yml
@@ -42,9 +42,10 @@
   with_items: '{{ leaf_facing_ifaces }}'
 
 - name: Creating OSPF Process 'OSPF_UNDERLAY_NET'
-  nxos_ospf_vrf:
-    ospf: OSPF_UNDERLAY_NET
-    router_id: '{{ router_id }}'
+  nxos_ospfv3:
+    config:
+      - process_id: OSPF_UNDERLAY_NET
+        router_id: '{{ router_id }}'
 
 - name: Configuring Leaf Facing Interfaces as OSPF p2p interfaces
   nxos_config:
