--- a/roles/leaf/tasks/main.yml
+++ b/roles/leaf/tasks/main.yml
@@ -58,7 +58,7 @@
   with_items: '{{ spine_facing_ifaces }}'
 
 - name: Creating OSPF Process 'OSPF_UNDERLAY_NET'
-  nxos_ospfv3:
+  cisco.nxos.nxos_ospfv3:
     config:
       processes:
         - process_id: OSPF_UNDERLAY_NET
