--- a/roles/spine/tasks/main.yml
+++ b/roles/spine/tasks/main.yml
@@ -57,7 +57,7 @@
   with_items: '{{ leaf_facing_ifaces }}'
 
 - name: Assigning Interfaces to the OSPF Process
-  nxos_ospf_interfaces:
+  cisco.nxos.nxos_ospf_interfaces:
     config:
       - name: '{{ item.name }}'
         address_family: 
