Updating deprecated modules to use the current module

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -482,7 +482,7 @@ changed=bright yellow
 console_prompt=white
 
 # (string) Defines the color to use when emitting debug messages
-debug=dark gray
+debug=bright gray
 
 # (string) Defines the color to use when emitting deprecation messages
 deprecate=bright purple
