Updating deprecated modules to use the current module

--- a/roles/leaf/tasks/main.yml
+++ b/roles/leaf/tasks/main.yml
@@ -61,7 +61,7 @@
   cisco.nxos.nxos_ospfv3:
     config:
       processes:
-        - process_id: OSPF_UNDERLAY_NET
+        - process_id: "OSPF_UNDERLAY_NET"
           router_id: '{{ router_id }}'
 
 - name: Configuring Spine Facing Interfaces as OSPF p2p interfaces
