--- a/roles/spine/tasks/main.yml
+++ b/roles/spine/tasks/main.yml
@@ -45,7 +45,7 @@
   cisco.nxos.nxos_ospfv3:
     config:
       processes:
-        - process_id: OSPF_UNDERLAY_NET
+        - process_id: "OSPF_UNDERLAY_NET"
           router_id: '{{ router_id }}'
 
 - name: Configuring Leaf Facing Interfaces as OSPF p2p interfaces
