--- a/roles/spine/tasks/main.yml
+++ b/roles/spine/tasks/main.yml
@@ -42,11 +42,11 @@
   with_items: '{{ leaf_facing_ifaces }}'
 
 - name: Creating OSPF Process 'OSPF_UNDERLAY_NET'
-  cisco.nxos.nxos_ospfv3:
+  cisco.nxos.nxos_ospfv2:
     config:
       processes:
         - process_id: OSPF_UNDERLAY_NET
-          router_id: 1.1.1.1 #'{{ router_id }}'
+          router_id: '{{ router_id }}'
 
 - name: Configuring Leaf Facing Interfaces as OSPF p2p interfaces
   nxos_config:
