Updating deprecated modules to use the current module

--- a/roles/leaf/tasks/main.yml
+++ b/roles/leaf/tasks/main.yml
@@ -104,13 +104,10 @@
     config:
       as_number: 64520
       router_id: '{{ router_id }}'
-
-- name: Configuring Spines as BGP Neighbors
-  nxos_bgp_neighbor:
-    asn: '64520'
-    neighbor: '{{ item.neighbor }}'
-    remote_as: '64520'
-    update_source: Loopback0
+      neighbors:
+        - neighbor_address: '{{ item.neighbor }}'
+          remote_as: 64520
+          update_source: Loopback0
   with_items: '{{ bgp_spine_neighbors }}'
 
 - name: Enabling L2VPN EVPN Address-Family Parameters For Spine Neighbors
